# agent-lemon-lime

./: .coderabbit.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  REDHAT.md  pyproject.toml
docs/superpowers/plans/: 2026-04-14-agent-lemon-lime.md  2026-04-15-hello-world-enhancement.md  2026-04-16-openshell-sandbox-cli.md  2026-04-20-agentic-probe-suite.md  2026-04-20-pluggable-eval-backends.md  2026-04-20-synthesis-report.md  2026-05-13-harness-judge-integration.md
docs/superpowers/specs/: 2026-04-15-hello-world-enhancement-design.md  2026-04-16-openshell-sandbox-cli-design.md  2026-04-20-agentic-probe-suite-design.md  2026-04-20-pluggable-eval-backends-design.md  2026-04-20-synthesis-report-design.md  2026-05-13-harness-judge-integration-design.md
examples/hello_world/: README.txt  agent-lemon.yaml  agent.py  pyproject.toml
examples/hello_world/evals/: test_cases.yaml
src/agent_lemon_lime/: __init__.py  config.py
src/agent_lemon_lime/agents/: lemon.py  lime.py
src/agent_lemon_lime/cli/: lemon.py  lime.py
src/agent_lemon_lime/evals/: backends.py  loader.py  runner.py  scoring.py  skills.py  standard.py
src/agent_lemon_lime/harness/: base.py  local.py  mock.py  openshell.py
src/argus/: __init__.py
src/argus/cli/: __init__.py  (+2 more)
tests/: conftest.py  test_agents.py  test_analyzer.py  test_backends.py  test_cli.py  test_config.py  test_evals.py  test_harness.py  test_integration.py  test_judge.py  test_llm.py  test_preflight.py  test_probe_loader.py  test_report.py  test_scoring.py  test_scp.py  test_scp_converter.py  test_skills.py
(+20 files in other folders)
